--- a/app/src/main/res/layout/fragment_taquilla.xml
+++ b/app/src/main/res/layout/fragment_taquilla.xml
@@ -183,7 +183,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/intrFila" />
+                android:hint="@string/intrFila"
+                android:inputType="number"/>
 
             <TextView
                 android:id="@+id/tvAsiento"
@@ -220,7 +221,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/intrFila"/>
+            android:hint="@string/intrFila"
+            android:inputType="number"/>
 
         <TextView
             android:id="@+id/tvAsiento2"
@@ -250,7 +252,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fila"/>
+            android:text="@string/fila"
+            android:inputType="number"/>
 
         <EditText
             android:id="@+id/etFila3"
@@ -287,7 +290,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fila"/>
+            android:text="@string/fila"
+            android:inputType="number"/>
 
         <EditText
             android:id="@+id/etFila4"
@@ -324,7 +328,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fila"/>
+            android:text="@string/fila"
+            android:inputType="number"/>
 
         <EditText
             android:id="@+id/etFila5"
@@ -361,7 +366,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fila"/>
+            android:text="@string/fila"
+            android:inputType="number"/>
 
         <EditText
             android:id="@+id/etFila6"
@@ -398,7 +404,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fila"/>
+            android:text="@string/fila"
+            android:inputType="number"/>
 
         <EditText
             android:id="@+id/etFila7"
@@ -442,7 +449,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/intrFila"/>
+            android:hint="@string/intrFila"
+            android:inputType="number"/>
 
         <TextView
             android:id="@+id/tvAsiento8"
@@ -472,7 +480,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/fila"/>
+                android:text="@string/fila"
+                android:inputType="number"/>
 
             <EditText
                 android:id="@+id/etFila9"
