--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -47,4 +47,13 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvValidPwdPer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/llCambioPwd"
+        android:layout_marginTop="@dimen/margen_app"
+        android:text="@string/tv_valid_pwd"
+        android:textSize="@dimen/tv_size"/>
+
 </RelativeLayout>
